# DataMind

./: .env.example  .gitignore  AGENTS.md  Introduce.md  README.md  SYSTEM_DATABASE.md  _apply_all_fixes.py  _test_agent_multi_role.py  _test_compile4.py  _test_compile6.py  apply_fixes.py  docker-compose.yml  start.bat
backend/: .dockerignore  Dockerfile  _patch_simple_insight.py  analysis_and_fix.py  analyze_sql_issues.py  apply_sql_fixes.py  check_demo_db.py  check_env.py  check_pwd.py  debug_normalize.py  directory_structure.md  e2e_agent_answer_test.py  e2e_agent_test.py  e2e_full_test.py  e2e_full_test_v2.py  e2e_live_test.py  e2e_role_test.py  fix_between.py  fix_fk_map.py  fix_joins.py  fix_normalize.py  fix_perms.py  fix_rem_issues.py  fix_salary.py  fix_salary_check.py  get_users.py  pyproject.toml  quick_test.py  requirements-dev.txt  requirements.txt  test_admin.py  test_admin_ask.py  test_errors.py  test_login.py  verify_sql_deep.py  verify_v3_fixes.py
backend/app/: config.py  database.py  main.py  mcp_client.py  seed.py
backend/app/agents/: analysis_agent.py  base.py  factory.py  intent.py  sql_agent.py
backend/app/api/: agent.py  auth.py  dashboard.py  datasources.py  query.py  users.py
backend/app/core/: agent_base.py  agent_factory.py  audit.py  auth.py  auth_context.py  (+13 more)
backend/tests/: conftest.py  test_agent_full_flow.py  test_agent_orchestrator.py  test_agent_sql_tools.py  test_auth.py  test_integration.py  test_mcp_auth_rls.py  test_mcp_integration.py  test_repositories.py  test_row_level_security.py  test_services.py  test_sql_quality.py
(+87 files in other folders)
